ans3/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: serveapp
  name: myservice
  annotations:
    haproxy.router.openshift.io/ip_whitelist: 0.0.0.0/0
spec:
  host: lastname-firstname-mcm.rahtiapp.fi
  to:
    kind: Service
    name: serve
    weight: 100
